# mx-source-build

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  notes.md
.github/workflows/: cmake-double-win-osx-linux-manual.yml  cmake-multi-platform.yml  cmake-win-osx-linux-manual.yml  debug-cmake-multi-platform.yml  debug-osx-linux-cmake.yml  debug-win-osx-linux-cmake.yml  release.yml  win-osx-linux-manual.yml
libs/: cargo_data.xml  sql.xml  technical_staff.txt
libs/OpenSSL/openssl-3xx/include/openssl/: opensslv.h
libs/curl/: readme-linux.txt
libs/curl/libs/x64/mac/: libcurl.4.dylib  libcurl.la
libs/curl/libs/x64/win/: libcurl_debug.lib
libs/fmt/include/fmt/: format.h
libs/freetype2/builds/unix/: ftsystem.c
libs/imgui4xp/: fa-solid-900.v15.4.inc
libs/imgui4xp/GL/: glext.h
libs/imgui4xp/ImgWindow/: ImgFreeTypeFontAtlas.cpp  ImgFreeTypeFontAtlas.h  ImgWindow.cpp  ImgWindow.h  WavFile.cpp
libs/imgui4xp/colors/: mx_colors.hpp
libs/imgui4xp/imgui/: custom_code_README.txt  imconfig.h  imgui.cpp
libs/imgui4xp/imgui/misc/freetype/: imgui_freetype.cpp
libs/polyline-cpp/src/: SimplePolyline.cpp  SimplePolyline.h
libs/sqlite/mission_sql/: missionx_table_creation.sql  osm_queries.sql  sql01.sql  sql02.sql  sql03.sql
libs/sqlite/sqlite/: extension-functions.h
libs/stb/: stb_image.cpp  stb_image.h
src/: TODO.htm  lr_crash.h  main.cpp  mission.cpp  mission.h  plugin.cpp  plugin.h
src/core/: Message.cpp  Message.h  MxOptions.cpp  MxOptions.h  MxUtils.cpp  MxUtils.h  MxUtils.h.orig  QueueMessageManager.cpp  QueueMessageManager.h  TimeFragment.hpp  Timer.hpp  Utils.cpp  Utils.h  base_c_includes.h  base_define_const.h  base_xp_include.h  data_manager.cpp  data_manager.h  dataref_const.cpp  dataref_const.h  dataref_manager.cpp  dataref_manager.h  mx_base_node.cpp  mx_base_node.h  mx_return.hpp  mxconst.h  mxconst.template  mxconst_bkup.cpp  mxconst_bkup.h  mxconst_builder.sh  mxconst_gemini.txt  mxproperty.hpp  mxproperty_with_string.hpp  sha.hpp  version.hpp  xx_mission_constants.hpp
src/core/coordinate/: NavAidInfo.hpp  Point.hpp  Points.hpp  UtilsGraph.hpp
src/core/embeded_script/: base_script.hpp  ext_script.cpp  ext_script.h  my_basic.c  my_basic.h  script_manager.cpp  script_manager.h
src/core/obj3d/: obj3d.cpp  obj3d.h
src/core/sound/: Sound.cpp  Sound.h  SoundFragment.cpp  SoundFragment.h
src/core/thread/: base_thread.hpp  gather_stats.cpp  gather_stats.h
src/core/tokenizer/: Tokenizer.cpp  Tokenizer.h
src/core/unix/: make_unique_unix.h
src/core/vr/: mxvr.cpp  mxvr.h
src/data/: Briefer.cpp  Briefer.hpp  Choice.cpp  Choice.h  EndMission.hpp  Objective.cpp  Objective.h  Task.cpp  Task.h  Trigger.cpp  Trigger.h  Waypoint.cpp  Waypoint.h  mxProperties.hpp  mxpadMsgLine.hpp
src/inv/: Inventory.cpp  Inventory.h  station.cpp  station.h
src/io/: BrieferInfo.cpp  BrieferInfo.h  IXMLParser.cpp  IXMLParser.h  ListDir.cpp  ListDir.h  Log.cpp  Log.hpp  OptimizeAptDat.cpp  OptimizeAptDat.h  TemplateFileInfo.hpp  dbase.cpp  dbase.h  read_mission_file.cpp  read_mission_file.h  system_actions.cpp  system_actions.h  writeLogThread.cpp  writeLogThread.h
src/logic/: BindCommand.cpp  BindCommand.h  MxParam.hpp  dataref_param.cpp  dataref_param.h
src/random/: RandomEngine.cpp  RandomEngine.h
src/ui/: MxUICore.cpp  MxUICore.hpp
src/ui/core/: BitmapReader.cpp  BitmapReader.h  MxShader.hpp  TextureFile.h
src/ui/gl/: CueInfo.cpp  CueInfo.h  MXCDisplay.cpp  MXCDisplay.h  WinImguiBriefer.cpp  WinImguiBriefer.h  WinImguiMxpad.cpp  WinImguiMxpad.h  WinImguiOptions.cpp  WinImguiOptions.h
